# multiple_intersections

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: CompilerWarnings.cmake  Conan.cmake  StandardProjectSettings.cmake
results/: 2022-05-17.txt  2022-05-18.csv  2022-05-18.txt  2022-05-19.txt  comparisons-2022-05-18.txt
src/: binary_search.h  galloping_search.h  generate_data.h  less_branching.h  multiple_intersections.cpp  std_set_intersection.h
test/: CMakeLists.txt  catch_main.cpp  intersection_tests.cpp  upper_and_lower_bound_tests.cpp
